--- a/deal_with_null/pom.xml
+++ b/deal_with_null/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.lqw</groupId>
-    <artifactId>java8_optional</artifactId>
+    <artifactId>deal_with_null</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>java8_optional</name>
-    <description>java8新特性Optional</description>
+    <name>deal_with_null</name>
+    <description>优雅地处理空值</description>
 
     <properties>
         <java.version>1.8</java.version>
@@ -21,23 +21,25 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.16.20</version>
-            <scope>provided</scope>
-        </dependency>
-
+        <!--&lt;!&ndash; Spring Data JPA 依赖 :: 数据持久层框架 &ndash;&gt;-->
+        <!--<dependency>-->
+            <!--<groupId>org.springframework.boot</groupId>-->
+            <!--<artifactId>spring-boot-starter-data-jpa</artifactId>-->
+        <!--</dependency>-->
     </dependencies>
 
     <build>
